add login functionality, jwt token generation, AuthenticationFilter